--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">mcampweek2</string>
+    <string name="kakao_app_key">7a84bfdd29eaac7871c38be109cdf71e</string>
 </resources>
